@@ -16,6 +16,7 @@ DB += ATCACommon.db
 DB += crossbarCtrl.db
 DB += StreamLong.db
 DB += StreamUlong.db
+DB += StreamShort.db
 
 # =======================================================================
 
