@@ -1,3 +1,7 @@
+R1.3.0        03-10-2020  Kukhee Kim
+              Change data type for stream - Int32Array to Int16Array
+              Add SHORT type waveform for the debug stream
+
 R1.2.0        03-03-2020  Kukhee Kim
               Add slow update waveforms for debug stream
 
